Updated for 2022 APC

--- a/apc/index.html
+++ b/apc/index.html
@@ -60,12 +60,12 @@
 
     <!-- Favicons -->
 
-    <meta property="og:image" content="../static/img/apc2021_og.png" />
-    <meta property="og:title" content="제 11회 아주대학교 프로그래밍 경시대회가 열립니다!" />
+    <meta property="og:image" content="../static/img/apc2022_og.png" />
+    <meta property="og:title" content="제 12회 아주대학교 프로그래밍 경시대회가 열립니다!" />
     <meta property="og:url" content="/apc" />
-    <meta property="og:site_name" content="APC 2021" />
+    <meta property="og:site_name" content="APC 2022" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="2021년 10월 30일, 제11회 Ajou Programming Contest가 개최됩니다." />
+    <meta property="og:description" content="2022년 11월 13일, 제12회 Ajou Programming Contest가 개최됩니다." />
 
 </head>
 
@@ -109,17 +109,17 @@
                         <div class="element">
                             <div class="element">
 
-                                <h1>2021 아주대학교 프로그래밍 경시대회</h1>
+                                <h1>2022 아주대학교 프로그래밍 경시대회</h1>
                                 <h4>
-                                    <br>대회가 종료되었습니다.
+                                    <!-- <br>대회가 종료되었습니다. -->
                                 </h4>
                                 <div class="space"></div>
                                 <div class="row">
                                     <div class="col-xs-6 animated fadeInRight">
                                         <div class="heading-line color-white big"></div>
                                         <h3><strong>대회 일시</strong></h3>
-                                        <h1 class="hidden-xs font-width:500">10월 30일 14:00</h1>
-                                        <h2 class="visible-xs font-width:500">10월 30일 14:00</h2>
+                                        <h1 class="hidden-xs font-width:500">11월 13일 14:00</h1>
+                                        <h2 class="visible-xs font-width:500">11월 13일 14:00</h2>
                                         <!-- <h1 class="lighter hidden-xs" style="text-align:center;">~ 19:00</h1> -->
                                         <!-- <h2 class="lighter visible-xs">2019.05.26 13:00</h2> -->
                                     </div>
@@ -127,8 +127,8 @@
                                     <div class="col-xs-6 animated fadeInRight">
                                         <div class="heading-line color-white big"></div>
                                         <h3><strong>접수 기간</strong></h3>
-                                        <h1 class="hidden-xs font-width:500">10월 27일 23:59까지</h1>
-                                        <h2 class="visible-xs font-width:500">10월 27일 23:59까지</h2>
+                                        <h1 class="hidden-xs font-width:500">11월 10일 23:59까지</h1>
+                                        <h2 class="visible-xs font-width:500">11월 10일 23:59까지</h2>
                                     </div>
                                 </div>
                             </div>
@@ -142,7 +142,8 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <div class="row">
-                            <div class="col-xs-6"> <a href="https://forms.gle/hnYYwenug45Ry4p69" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 종료</button></a></div>
+                            <!-- <div class="col-xs-6"> <a href="https://forms.gle/hnYYwenug45Ry4p69" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 종료</button></a></div> -->
+                            <div class="col-xs-6"> <a href="" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 전</button></a></div>
                             <div class="col-xs-6"> <a href="https://www.acmicpc.net/category/408" target="_blank"><button type="button" class="btn btn-punch btn-lg btn-success btn-darker btn-block"">기출문제</button></a></div>                     
                         </div>
                         <div class="space"></div>
@@ -152,13 +153,13 @@
                         <p class="lead">
                             <strong>Ajou Programming Contest</strong>는 논리적인 사고로 문제를 해결하는 아주대학교 교내 프로그래밍 경시대회입니다.
                             <br>전공 학생들에게는 실력을 검증하고 성장할 수 있는 기회가, 비전공 학생들에게는 보다 흥미롭게 SW의 가치를 경험하는 기회가 될 것입니다.
-                            <br>정보통신대학 소속 학생들은 <strong>Division1</strong>에만 참여가능하고, 비소속 학생들은 <strong>제약 없이</strong> 참여 가능합니다.
+                            <br>정보통신대학 및 소프트웨어융합대어 소속 학생들은 <strong>Division1</strong>에만 참여가능하고, 비소속 학생들은 <strong>제약 없이</strong> 참여 가능합니다.
                             <br>Division1, Division2 는 순위 및 수상이 따로 이루어집니다.
 
                         </p>
                         <h3>시상 내역</h3>
                         <p class="big-text">
-                            <strong>APC</strong> 참가자 중 수상을 하지 못한 학생들에게 추첨을 통해 1만원 상당의 상품을 증정합니다. (총 10명)
+                            <strong>APC</strong> 참가자 중 수상을 하지 못한 학생들에게 추첨을 통해 1~2만원 상당의 상품을 증정합니다. (총 40명)
                             <br> 외의 우수성적자 시상에 관해서는 아래를 참고해주세요.
                             <h6>* 시상 내역은 학과 사정에 따라 변경될 수 있습니다. </h6>
                         </p>
@@ -167,9 +168,9 @@
                                 <h4>Division1 - Competition Round</h4>
                                 <ul>
                                     <li>대상: 총장상 및 상금 50만원(1명)</li>
-                                    <li>최우수상: LINC+ 사업단장상 및 상금 30만원(1명)</li>
-                                    <li>우수상: 창의산학교육원장상 및 상금 20만원(2명)</li>
-                                    <li>장려상: 창의산학교육원장상 및 상금 10만원(3명)</li>
+                                    <li>최우수상: 소프트웨어융합대학장상 상금 30만원(1명)</li>
+                                    <li>우수상: 소프트웨어융합대학장상 및 상금 20만원(2명)</li>
+                                    <li>장려상: 소프트웨어융합대학장상 및 상금 10만원(3명)</li>
                                     <p>
                                         상위 입상자에게 경인지역 6개대학 연합 프로그래밍 경시대회 <a href="http://shake.codes"><strong>shake!</strong></a> 참가 자격 부여
                                     </p>
@@ -179,9 +180,9 @@
                                 <h4>Division2 - Challenge Round</h4>
                                 <ul>
                                     <li>대상: 총장상 및 상금 30만원(1명)</li>
-                                    <li>최우수상: LINC+ 사업단장상 및 상금 20만원(1명)</li>
-                                    <li>우수상: 창의산학교육원장상 및 상금 10만원(3명)</li>
-                                    <p> 정보통신대학 소속 학생은 <strong>Division2</strong> 참가 불가</p>
+                                    <li>최우수상: 소프트웨어융합대학장상 및 상금 20만원(1명)</li>
+                                    <li>우수상: 소프트웨어융합대학장상 및 상금 10만원(3명)</li>
+                                    <p> 정보통신대학 및 소프트웨어융합대학 소속 학생은 <strong>Division2</strong> 참가 불가</p>
                                 </ul>
                             </div>
                         </div>
@@ -239,7 +240,7 @@
                         <div class="row">
                             <div class="col-md-10 col-md-offset-1">
                                 <h3>대회 참가 자격</h3>
-                                    <h5><strong>2021 APC</strong> 당일 아주대학교 학생재학생 중 아래 자격을 만족하는 누구나</h5>
+                                    <h5><strong>2022 APC</strong> 당일 아주대학교 학생재학생 중 아래 자격을 만족하는 누구나</h5>
                                 <ul>
                                     <li>역대 한국 대학생 프로그래밍 경시대회 수상자가 아닌 자</li>
                                     <li>역대 shake! 3위 이상 수상자가 아닌 자</li>
@@ -250,21 +251,21 @@
                                 <ul>
                                     <li>
                                         <strong>APC</strong>는 1인 1팀의 개인전 형태로 치러집니다.</li>
-                                    <li>
+                                    <!-- <li>
                                         <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> (zoom을 이용한 참가 가이드)</a></li>
                                     <li>
                                         대회에 사용할 컴퓨터는 개인 지참해야 하며, 1인당 1대의 컴퓨터만 허용합니다.</li>
                                     <li>
 					    개인 컴퓨터에는 대회 시작 전 컴파일 할 수 있는 환경을 스스로 준비해야 합니다. IDE 사용에 제한은 없습니다.<br>(단, 온라인 IDE를 사용할 경우 해당 코드가 공개된다면 부정행위로 간주합니다.)
-                                    </li>
+                                    </li> -->
                                     <li>
                                         개인 컴퓨터와 마우스, 키보드를 제외한 모든 전자기기의 사용은 금지됩니다.</li>
                                     <li>
 				   	타인과 의견을 주고받을 수 있는 모든 메신저의 사용은 금지됩니다.</li>
                                     <li>
                                         대회가 진행되는 동안 타인 간에 의사소통, 자료 공유 등의 모든 행위는 금지됩니다.</li>
-                                    <li>
-					    하드카피, 소프트카피의 사용이 허용됩니다. 단, 하드카피 및 소프트카피 사용 시 참조한 자료 정보의 출처를 주석으로 처리하여 코드에 적어야 합니다.</li>
+                                    <!-- <li>
+					    하드카피, 소프트카피의 사용이 허용됩니다. 단, 하드카피 및 소프트카피 사용 시 참조한 자료 정보의 출처를 주석으로 처리하여 코드에 적어야 합니다.</li> -->
 				    <li>
 					본인의 아이디와 패스워드를 타인에게 공개하거나 온/오프라인 상에서 공개하는 행위는 부정행위로 간주합니다.
 				    </li>
@@ -394,7 +395,7 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-1">
                         <h5 class="uppercase-text letter-spacing">About</h5>
-                        <strong>APC</strong>는 아주대학교 재학생을 대상으로 진행되는 교내 프로그래밍 경시대회로서, 프로그래밍을 공부하는 사람들에게 다양한 경험과 기회를 제공하고 선의의 경쟁을 통해 인재를 발굴하고 함께 발전하는데에 목적을 두고 있습니다.
+                        <strong>APC(Ajou Programming Contest)</strong>는 아주대학교 재학생을 대상으로 진행되는 교내 프로그래밍 경시대회로서, 프로그래밍을 공부하는 사람들에게 다양한 경험과 기회를 제공하고 선의의 경쟁을 통해 인재를 발굴하고 함께 발전하는데에 목적을 두고 있습니다.
                     </div>
                     <div class="col-md-1"></div>
                     <div class="col-md-3">
