--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             <h2 class="lighter"><strong>대회 참가</strong> 안내</h2>
                             <p>
                                 <strong>shake!</strong>는 각 학교 선발전을 통해 선발된 학교대표학생들만 참가할 수 있습니다.
-                                2021 경인지역 6개대학 연합 프로그래밍 경시대회 <strong>shake!</strong>의 <strong>학교대표 선발전</strong> 일정은 아래와 같습니다.
+                                2022 경인지역 6개대학 연합 프로그래밍 경시대회 <strong>shake!</strong>의 <strong>학교대표 선발전</strong> 일정은 아래와 같습니다.
                                 <br><strong>문의사항</strong>은 각 학교별 주관처를 통해주시기 바랍니다.
                             </p>
                         </div>
@@ -287,12 +287,12 @@
 
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="pre_ajou">
-                                    <p><strong>아주대학교</strong>는 <strong>2021 아주대학교 프로그래밍 경시대회</strong>를
+                                    <p><strong>아주대학교</strong>는 <strong>2022 아주대학교 프로그래밍 경시대회</strong>를
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 10. 30</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2022. 11. 13</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;알고리즘 소학회 A.N.S.I.
-                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;정의찬 010-3386-5791</p>
+                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;심지수 010-3029-1203</p>
                                     <a href="/apc" title="" class="btn btn-punch btn-info btn-link" target="_blank">아주대학교 선발전 바로가기</a>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_khee">
@@ -305,11 +305,11 @@
                                     <!-- <a href="http://swedu.khu.ac.kr/board5/bbs/board.php?bo_table=06_01&wr_id=1218" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회가 종료되었습니다</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_skku">
-                                    <p><strong>성균관대학교</strong>는 <strong>2021 shake! 성균관대학교 선발전</strong>을 통해 10명의 학교대표를 선발합니다.
+                                    <p><strong>성균관대학교</strong>는 <strong>2022 shake! 성균관대학교 선발전</strong>을 통해 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 10. 30</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2022. 11. 13</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;알고리즘 동아리 NPC
-                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;손병호 010-2923-7075</p>
+                                        <br> <strong>주관 대표:</strong>&nbsp;&nbsp;안우솔 010-4261-0125</p>
                                     <!-- <a href="" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회 신청이 마감되었습니다.</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_inha">
