--- a/apc/index.html
+++ b/apc/index.html
@@ -240,36 +240,42 @@
                         <div class="row">
                             <div class="col-md-10 col-md-offset-1">
                                 <h3>대회 참가 자격</h3>
-                                    <h5><strong>2022 APC</strong> 당일 아주대학교 학생재학생 중 아래 자격을 만족하는 누구나</h5>
+                                    <h5><strong>2022 APC</strong> 당일 아주대학교 학생 재학생 중 아래 자격을 만족하는 누구나</h5>
                                 <ul>
                                     <li>역대 한국 대학생 프로그래밍 경시대회 수상자가 아닌 자</li>
                                     <li>역대 shake! 3위 이상 수상자가 아닌 자</li>
                                     <li>역대 <strong>APC Division1</strong> 수상자는 시상에서 제외되며, <strong>shake!</strong> 출전권은 획득 가능</li>
                                     <li>역대 <strong>APC Division2</strong> 수상자는 <strong>Division1</strong>에만 참가 가능</li>
                                 </ul>
+
+                                <p>
+                                    휴학생은 참가 불가능합니다.
+                                </p>
+
                                 <h3>대회 주요 규칙</h3>
                                 <ul>
                                     <li>
                                         <strong>APC</strong>는 1인 1팀의 개인전 형태로 치러집니다.</li>
                                     <!-- <li>
-                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> (zoom을 이용한 참가 가이드)</a></li>
+                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> (zoom을 이용한 참가 가이드)</a></li> -->
                                     <li>
                                         대회에 사용할 컴퓨터는 개인 지참해야 하며, 1인당 1대의 컴퓨터만 허용합니다.</li>
                                     <li>
-					    개인 컴퓨터에는 대회 시작 전 컴파일 할 수 있는 환경을 스스로 준비해야 합니다. IDE 사용에 제한은 없습니다.<br>(단, 온라인 IDE를 사용할 경우 해당 코드가 공개된다면 부정행위로 간주합니다.)
-                                    </li> -->
+					                    개인 컴퓨터에는 대회 시작 전 컴파일 할 수 있는 환경을 스스로 준비해야 합니다. IDE 사용에 제한은 없습니다.<br>
+                                        (단, 온라인 IDE를 사용할 경우 해당 코드가 공개된다면 부정행위로 간주합니다.)</li>
                                     <li>
                                         개인 컴퓨터와 마우스, 키보드를 제외한 모든 전자기기의 사용은 금지됩니다.</li>
                                     <li>
-				   	타인과 의견을 주고받을 수 있는 모든 메신저의 사용은 금지됩니다.</li>
+				   	                    타인과 의견을 주고받을 수 있는 모든 메신저의 사용은 금지됩니다.</li>
                                     <li>
                                         대회가 진행되는 동안 타인 간에 의사소통, 자료 공유 등의 모든 행위는 금지됩니다.</li>
+                                    <li>
+                                        하드카피, 소프트카피는 허용되지 않습니다.</li>
                                     <!-- <li>
-					    하드카피, 소프트카피의 사용이 허용됩니다. 단, 하드카피 및 소프트카피 사용 시 참조한 자료 정보의 출처를 주석으로 처리하여 코드에 적어야 합니다.</li> -->
-				    <li>
-					본인의 아이디와 패스워드를 타인에게 공개하거나 온/오프라인 상에서 공개하는 행위는 부정행위로 간주합니다.
-				    </li>
-				    <li>
+					                    하드카피, 소프트카피의 사용이 허용됩니다. 단, 하드카피 및 소프트카피 사용 시 참조한 자료 정보의 출처를 주석으로 처리하여 코드에 적어야 합니다.</li> -->
+				                    <li>
+					                    본인의 아이디와 패스워드를 타인에게 공개하거나 온/오프라인 상에서 공개하는 행위는 부정행위로 간주합니다.</li>
+				                    <li>
                                         모든 부정행위자는 실격 처리 되며, 그 결과를 각 학과에 통보합니다.</li>
                                     <li>
                                         기타 문의사항에 대해서는 주관처(ansiajou@gmail.com)로 문의해주세요.</li>
