Updated competition location

--- a/apc/index.html
+++ b/apc/index.html
@@ -208,26 +208,29 @@
                                         <tr>
                                             <td>13:00 ~ 13:30</td>
                                             <td>행사소개</td>
-                                            <td>온라인</td>
+                                            <td>오프라인</td>
                                         </tr>
                                         <tr>
                                             <td>13:30 ~ 14:00</td>
                                             <td>이동 및 환경점검</td>
-					                        <td>온라인</td>
+					                        <td>오프라인</td>
                                         </tr>
                                         <tr>
                                             <td><strong>14:00 ~ 18:00</strong></td>
                                             <td><strong>본대회</strong></td>
-                                            <td><strong>온라인</strong></td>
+                                            <td><strong>오프라인</strong></td>
                                         </tr>
                                         <tr>
                                             <td>18:00 ~ 19:00</td>
                                             <td>풀이 및 결과발표</td>
-                                            <td>온라인</td>
+                                            <td>오프라인</td>
                                         </tr>
                                     </tbody>
                                 </table>
-                                위 일정은 당일 사정에 따라 조정될 수 있습니다. 
+                                <p>
+                                    위 일정은 당일 사정에 따라 조정될 수 있습니다. <br>
+                                    <strong>(오프라인 장소 추후 공지 예정)</strong>
+                                </p>
                             </div>
                         </ul>
                         </div>
