Added contest location

--- a/apc/index.html
+++ b/apc/index.html
@@ -193,46 +193,65 @@
 
                         <h1 class="lighter">대회 일정</h1>
                         <div class="row">
-                        <ul>
-                            <h5>본 대회는 4시간 동안 진행되며, 세부 일정은 아래와 같습니다.</h5>
-                            <div class="container">
-                                <table class="table table-hover" id="cssTable" style="max-width:700px;">
-                                    <thead>
-                                        <tr>
-                                            <th>시간</th>
-                                            <th>일정</th>
-                                            <th>장소</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>13:00 ~ 13:30</td>
-                                            <td>행사소개</td>
-                                            <td>오프라인</td>
-                                        </tr>
-                                        <tr>
-                                            <td>13:30 ~ 14:00</td>
-                                            <td>이동 및 환경점검</td>
-					                        <td>오프라인</td>
-                                        </tr>
-                                        <tr>
-                                            <td><strong>14:00 ~ 18:00</strong></td>
-                                            <td><strong>본대회</strong></td>
-                                            <td><strong>오프라인</strong></td>
-                                        </tr>
-                                        <tr>
-                                            <td>18:00 ~ 19:00</td>
-                                            <td>풀이 및 결과발표</td>
-                                            <td>오프라인</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            <ul>
+                                <h5>본 대회는 4시간 동안 진행되며, 세부 일정은 아래와 같습니다.</h5>
+                                <div class="container">
+                                    <table class="table table-hover" id="cssTable" style="max-width:700px;">
+                                        <thead>
+                                            <tr>
+                                                <th>시간</th>
+                                                <th>일정</th>
+                                                <th>장소</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>13:00 ~ 13:30</td>
+                                                <td>행사소개</td>
+                                                <td>오프라인</td>
+                                            </tr>
+                                            <tr>
+                                                <td>13:30 ~ 14:00</td>
+                                                <td>이동 및 환경점검</td>
+					                            <td>오프라인</td>
+                                            </tr>
+                                            <tr>
+                                                <td><strong>14:00 ~ 18:00</strong></td>
+                                                <td><strong>본대회</strong></td>
+                                                <td><strong>오프라인</strong></td>
+                                            </tr>
+                                            <tr>
+                                                <td>18:00 ~ 19:00</td>
+                                                <td>풀이 및 결과발표</td>
+                                                <td>오프라인</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <p>
+                                        위 일정은 당일 사정에 따라 조정될 수 있습니다. <br>
+                                    </p>
+                                </div>
+                            </ul>
+                        </div>
+
+                        <div class="space"></div>
+                        <hr/>
+                        <div class="space"></div>
+
+                        <h1 class="lighter">대회 장소</h1>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h4>Division1 - Competition Round</h4>
                                 <p>
-                                    위 일정은 당일 사정에 따라 조정될 수 있습니다. <br>
-                                    <strong>(오프라인 장소 추후 공지 예정)</strong>
+                                    팔달관 318, 333호
                                 </p>
                             </div>
-                        </ul>
+                            <div class="col-sm-6">
+                                <h4>Division2 - Challenge Round</h4>
+                                <p>
+                                    팔달관 111호
+                                </p>
+                            </div>
                         </div>
 
                         <div class="space"></div>
