--- a/apc/index.html
+++ b/apc/index.html
@@ -278,31 +278,21 @@
 
                                 <h3>대회 주요 규칙</h3>
                                 <ul>
-                                    <li>
-                                        <strong>APC</strong>는 1인 1팀의 개인전 형태로 치러집니다.</li>
-                                    <!-- <li>
-                                        <strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> (zoom을 이용한 참가 가이드)</a></li> -->
-                                    <li>
-                                        대회에 사용할 컴퓨터는 개인 지참해야 하며, 1인당 1대의 컴퓨터만 허용합니다.</li>
-                                    <li>
-					                    개인 컴퓨터에는 대회 시작 전 컴파일 할 수 있는 환경을 스스로 준비해야 합니다. IDE 사용에 제한은 없습니다.<br>
+                                    <li>APC는 1인 1팀의 <strong>개인전</strong> 형태로 치러집니다.</li>
+                                    <!-- <li><strong>본 대회는 온라인으로 진행되며, 참가자 전원은 대회 시간동안 zoom 어플리케이션을 통해 본인의 모습을 생중계 해야 합니다.</strong><a href="https://drive.google.com/file/d/1aoWj-KhGFc1uaghuiDzoojZ8omad6Imo/view?usp=sharing"> (zoom을 이용한 참가 가이드)</a></li> -->
+                                    <li>대회에 사용할 <strong>컴퓨터는 개인 지참</strong>해야 하며, 1인당 1대의 컴퓨터만 허용합니다.</li>
+                                    <li>개인 컴퓨터에는 대회 시작 전 컴파일 할 수 있는 환경을 스스로 준비해야 합니다. IDE 사용에 제한은 없습니다.<br>
                                         (단, 온라인 IDE를 사용할 경우 해당 코드가 공개된다면 부정행위로 간주합니다.)</li>
-                                    <li>
-                                        개인 컴퓨터와 마우스, 키보드를 제외한 모든 전자기기의 사용은 금지됩니다.</li>
-                                    <li>
-				   	                    타인과 의견을 주고받을 수 있는 모든 메신저의 사용은 금지됩니다.</li>
-                                    <li>
-                                        대회가 진행되는 동안 타인 간에 의사소통, 자료 공유 등의 모든 행위는 금지됩니다.</li>
-                                    <li>
-                                        하드카피, 소프트카피는 허용되지 않습니다.</li>
-                                    <!-- <li>
-					                    하드카피, 소프트카피의 사용이 허용됩니다. 단, 하드카피 및 소프트카피 사용 시 참조한 자료 정보의 출처를 주석으로 처리하여 코드에 적어야 합니다.</li> -->
-				                    <li>
-					                    본인의 아이디와 패스워드를 타인에게 공개하거나 온/오프라인 상에서 공개하는 행위는 부정행위로 간주합니다.</li>
-				                    <li>
-                                        모든 부정행위자는 실격 처리 되며, 그 결과를 각 학과에 통보합니다.</li>
-                                    <li>
-                                        기타 문의사항에 대해서는 주관처(ansiajou@gmail.com)로 문의해주세요.</li>
+                                    <li>개인 컴퓨터와 마우스, 키보드를 제외한 <strong>모든 전자기기의 사용은 금지</strong>됩니다.</li>
+                                    <li>타인과 의견을 주고받을 수 있는 <strong>모든 메신저의 사용은 금지</strong>됩니다.</li>
+                                    <li>대회가 진행되는 동안 타인 간에 의사소통, 자료 공유 등의 모든 행위는 금지됩니다.</li>
+                                    <li>하드카피, 소프트카피는 허용되지 않습니다.</li>
+                                    <!-- <li>하드카피, 소프트카피의 사용이 허용됩니다. 단, 하드카피 및 소프트카피 사용 시 참조한 자료 정보의 출처를 주석으로 처리하여 코드에 적어야 합니다.</li> -->
+				                    <li>본인의 아이디와 패스워드를 타인에게 공개하거나 온/오프라인 상에서 공개하는 행위는 부정행위로 간주합니다.</li>
+				                    <li>모든 부정행위자는 실격 처리 되며, 그 결과를 각 학과에 통보합니다.</li>
+                                    <li>기타 문의사항에 대해서는 주관처(<a href="mailto:ansi.ajou@gmail.com">ansi.ajou@gmail.com</a>)로 문의해주세요.</li>
+                                    <li>문제의 모든 지문은 <strong>한국어</strong>로만 제공됩니다.</li>
+                                    <li>대회 시작 후 1시간 경과 이전까지는 대회장을 나가실 수 없습니다. 또한 대회장을 나가신 이후에는 더 이상의 풀이 제출은 하실 수 없습니다.</li>
                                 </ul>
 
                                 <h3>대회 진행 방식</h3>
@@ -312,8 +302,7 @@
                                     <li>제출된 소스코드는 시스템에 의해 실시간으로 채점됩니다.</li>
                                     <li>채점이 완료되면 참가자는 채점 결과를 확인할 수 있습니다.</li>
                                     <li>한 문제는 난이도에 따라 서브태스크로 나뉘며 각 난이도의 문제를 독립적으로 채점합니다.</li>
-                                    <li>제출 횟수에 제한은 없습니다.
-                                    </li>
+                                    <li>제출 횟수에 제한은 없습니다.</li>
                                     <li>대회 중 문제 및 채점에 관한 질문은 대회 진행 페이지의 문의하기 기능을 통해 문의해야 합니다.</li>
                                     <li>문제와 채점에 관련되지 않은 사항은 대회장에 있는 감독관에게 직접 문의합니다.</li>
                                     <li>대회 중 심각한 오류가 발견된 경우 문제의 수정 및 재채점이 가능하며, 이는 모든 참가자에게 공지됩니다.</li>
