--- a/apc/index.html
+++ b/apc/index.html
@@ -240,7 +240,16 @@
 
                         <h1 class="lighter">대회 장소</h1>
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-md-10 col-md-offset-1">
+                                <p>
+                                    <strong>팔달관 325호, 팔달관 409호</strong>
+                                </p>
+                                <p>
+                                    대회 당일 명찰을 나눠드리면서 개인별로 대회장을 안내해 드릴 예정입니다.
+                                    신청 마감 후, 메일로 다시 한 번 안내사항 전파해 드리겠습니다.
+                                </p>
+                            </div>
+                            <!-- <div class="col-sm-6">
                                 <h4>Division1 - Competition Round</h4>
                                 <p>
                                     팔달관 318, 333호<br>
@@ -253,7 +262,7 @@
                                     팔달관 111호<br>
                                     <strong>(변동 가능성 있음)</strong>
                                 </p>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="space"></div>
