--- a/apc/index.html
+++ b/apc/index.html
@@ -153,7 +153,7 @@
                         <p class="lead">
                             <strong>Ajou Programming Contest</strong>는 논리적인 사고로 문제를 해결하는 아주대학교 교내 프로그래밍 경시대회입니다.
                             <br>전공 학생들에게는 실력을 검증하고 성장할 수 있는 기회가, 비전공 학생들에게는 보다 흥미롭게 SW의 가치를 경험하는 기회가 될 것입니다.
-                            <br>정보통신대학 및 소프트웨어융합대어 소속 학생들은 <strong>Division1</strong>에만 참여가능하고, 비소속 학생들은 <strong>제약 없이</strong> 참여 가능합니다.
+                            <br>정보통신대학 및 소프트웨어융합대학 소속 학생들은 <strong>Division1</strong>에만 참여가능하고, 비소속 학생들은 <strong>제약 없이</strong> 참여 가능합니다.
                             <br>Division1, Division2 는 순위 및 수상이 따로 이루어집니다.
 
                         </p>
