--- a/apc/index.html
+++ b/apc/index.html
@@ -142,8 +142,8 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
                         <div class="row">
-                            <!-- <div class="col-xs-6"> <a href="https://forms.gle/hnYYwenug45Ry4p69" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 종료</button></a></div> -->
-                            <div class="col-xs-6"> <a href="https://forms.gle/6xSeBXFuCQa8o3iEA" target="_blank"><button type="button" class="btn btn-punch btn-secondary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 중</button></a></div>
+                            <div class="col-xs-6"> <a href="https://forms.gle/6xSeBXFuCQa8o3iEA" target="_blank"><button type="button" class="btn btn-punch btn-primary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 종료</button></a></div>
+                            <!-- <div class="col-xs-6"> <a href="https://forms.gle/6xSeBXFuCQa8o3iEA" target="_blank"><button type="button" class="btn btn-punch btn-secondary btn-lg btn-darker btn-block" data-toggle="modal" data-target="#modalSubmit">참가 신청 중</button></a></div> -->
                             <div class="col-xs-6"> <a href="https://www.acmicpc.net/category/408" target="_blank"><button type="button" class="btn btn-punch btn-lg btn-success btn-darker btn-block">기출문제</button></a></div>
                         </div>
                         <div class="space"></div>
