Updated after 2022 APC

--- a/apc/index.html
+++ b/apc/index.html
@@ -88,9 +88,9 @@
                     <div class="col-md-7 menu-col text-right">
                         <div class="menu">
                             <ul class="list-inline">
-                                <li><a href="https://www.acmicpc.net/contest/scoreboard/703">2021 Div.1 결과 보기</a></li>
-				                <li><a href="https://www.acmicpc.net/contest/scoreboard/704">2021 Div.2 결과 보기</a></li>
-                                <li><a href="https://drive.google.com/file/d/1gqSMhkn8oWVpynU9jH-sEclCMPQg2tp5/view?usp=sharing">풀이 슬라이드</a></li>
+                                <li><a href="https://www.acmicpc.net/contest/board/900">2022 Div.1 결과 보기</a></li>
+				                <li><a href="https://www.acmicpc.net/contest/board/901">2022 Div.2 결과 보기</a></li>
+                                <li><a href="https://drive.google.com/file/d/15QyNVeBW4hy7bv6xXqEhKBUymWAm8gWn/view?usp=sharing">풀이 슬라이드</a></li>
                             </ul>
                         </div>
                     </div>
