Update previous contest information and upcoming shake! contest information

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="pre_ajou">
-                                    <p><strong>아주대학교</strong>는 <strong>2022 아주대학교 프로그래밍 경시대회</strong>를
+                                    <p><strong>아주대학교</strong>는 <strong>2022 아주대학교 프로그래밍 경시대회 (APC)</strong>를
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
                                         <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2022. 11. 13</strong>
@@ -296,10 +296,10 @@
                                     <a href="/apc" title="" class="btn btn-punch btn-info btn-link" target="_blank">아주대학교 선발전 바로가기</a>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_khee">
-                                    <p><strong>경희대학교</strong>는 <strong>2021 경희대학교 봄 프로그래밍 경시대회</strong>를
+                                    <p><strong>경희대학교</strong>는 <strong>2022 경희대학교 봄 프로그래밍 경시대회</strong>를
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 05. 15</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2022. 05. 14</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;경희대학교 SW 중심대학 사업단
                                         <br> <strong>주관 대표:</strong> 박민재 010-2351-7847&nbsp;&nbsp; </p>
                                     <!-- <a href="http://swedu.khu.ac.kr/board5/bbs/board.php?bo_table=06_01&wr_id=1218" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회가 종료되었습니다</a> -->
@@ -313,28 +313,28 @@
                                     <!-- <a href="" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회 신청이 마감되었습니다.</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_inha">
-                                    <p><strong>인하대학교</strong>는 <strong>2021 인하대학교 프로그래밍 경시대회 IUPC</strong>를
+                                    <p><strong>인하대학교</strong>는 <strong>2022 인하대학교 프로그래밍 경시대회 (IUPC)</strong>를
                                         <br> 자체 선발전으로 진행, 9명의 학교대표를 선발합니다.
                                         <br> 2명의 선발전 출제진이 추가 학교대표로 선발됩니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 10. 02</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2022. 5. 21</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;인하대학교 컴퓨터공학 학술소모임 CTP
                                         <br> <strong>주관 대표:</strong>&nbsp;&nbsp;주도현 010-5092-3475</p>
                                     <a href="https://forms.gle/ocgc83HFGwSo3Z126" title="" class="btn btn-punch btn-info btn-link" target="_blank">인하대학교 선발전 바로가기</a>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_hyer">
-                                    <p><strong>한양대학교 ERICA</strong>는 <strong>ZOAC(Zero One Algorithm Contest 2021) 대회</strong>를
+                                    <p><strong>한양대학교 ERICA</strong>는 <strong>ZOAC(Zero One Algorithm Contest 2022) 대회</strong>를
                                         <br> 자체 선발전으로 진행, 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 12. 30</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2022. 12. 22</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;알고리즘 학회 0&1
                                         <br> <strong>주관 대표:</strong>&nbsp;&nbsp;윤병서 010-4532-2751</p>
                                     <!-- <a href="https://forms.gle/mLemgAgpaDoMqM456" title="" class="btn btn-punch btn-info btn-link" target="_blank">한양대학교 선발전 바로가기</a> -->
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="pre_krar">
-                                    <p><strong>한국항공대학교</strong>는 <strong>2021 제 1회 한국항공대학교 프로그래밍 경시대회</strong>을 통해 10명의 학교대표를 선발합니다.
+                                    <p><strong>한국항공대학교</strong>는 <strong>2022 제 2회 한국항공대학교 프로그래밍 경시대회 (KAUPC)</strong>을 통해 10명의 학교대표를 선발합니다.
                                         <br>
-                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2021. 11. 06</strong>
+                                        <br> <strong>선발전 일정:</strong>&nbsp;&nbsp;<strong>2022. 9. 17</strong>
                                         <br> <strong>선발전 주관처:</strong>&nbsp;&nbsp;항공대학교 소프트웨어학과, 알고리즘 학회 koala
                                         <br> <strong>주관 대표:</strong>&nbsp;&nbsp;천수환 010-7237-7616</p>
                                     <!-- <a href="" title="" class="btn btn-punch btn-info btn-link" target="_blank">대회 신청이 마감되었습니다.</a> -->
@@ -350,9 +350,9 @@
                             <div class="pb-header info-background dark"><h4 class="text-white"><strong>shake! 본선 정보</strong></h4></div>
                             <div class="pb-content info-background dark clearfix">
                                 <h4><strong>일시</strong></h4>
-                                2022년 1월 15일 토요일<br>
+                                2023년 3월 11일 토요일 (예상)<br>
                                 <h4><strong>장소</strong></h4>
-                                온라인 (zoom)<br>
+                                온라인 (Zoom)<br>
                                 <h4><strong>시상</strong></h4>
                                 1위 : 아주대학교 총장상 및 <strong>상금 100만원</strong><br>
                                 2위~3위 : 아주대학교 LINC+ 사업단장상 및 <strong>상금 70만원</strong><br>
